@@ -29,379 +29,379 @@
 #ifndef __PIC18FREGS_H__
 #define __PIC18FREGS_H__
 
-#if defined(pic18f242)
+#if defined(__SDCC_PIC18F242)
 #  include <pic18f242.h>
 
-#elif defined(pic18f248)
+#elif defined(__SDCC_PIC18F248)
 #  include <pic18f248.h>
 
-#elif defined(pic18f252)
+#elif defined(__SDCC_PIC18F252)
 #  include <pic18f252.h>
 
-#elif defined(pic18f258)
+#elif defined(__SDCC_PIC18F258)
 #  include <pic18f258.h>
 
-#elif defined(pic18f442)
+#elif defined(__SDCC_PIC18F442)
 #  include <pic18f442.h>
 
-#elif defined(pic18f448)
+#elif defined(__SDCC_PIC18F448)
 #  include <pic18f448.h>
 
-#elif defined(pic18f452)
+#elif defined(__SDCC_PIC18F452)
 #  include <pic18f452.h>
 
-#elif defined(pic18f458)
+#elif defined(__SDCC_PIC18F458)
 #  include <pic18f458.h>
 
-#elif defined(pic18f1220)
+#elif defined(__SDCC_PIC18F1220)
 #  include <pic18f1220.h>
 
-#elif defined(pic18f1230)
+#elif defined(__SDCC_PIC18F1230)
 #  include <pic18f1230.h>
 
-#elif defined(pic18f1320)
+#elif defined(__SDCC_PIC18F1320)
 #  include <pic18f1320.h>
 
-#elif defined(pic18f1330)
+#elif defined(__SDCC_PIC18F1330)
 #  include <pic18f1330.h>
 
-#elif defined(pic18f13k50)
+#elif defined(__SDCC_PIC18F13K50)
 #  include <pic18f13k50.h>
 
-#elif defined(pic18f14k50)
+#elif defined(__SDCC_PIC18F14K50)
 #  include <pic18f14k50.h>
 
-#elif defined(pic18f2220)
+#elif defined(__SDCC_PIC18F2220)
 #  include <pic18f2220.h>
 
-#elif defined(pic18f2221)
+#elif defined(__SDCC_PIC18F2221)
 #  include <pic18f2221.h>
 
-#elif defined(pic18f2320)
+#elif defined(__SDCC_PIC18F2320)
 #  include <pic18f2320.h>
 
-#elif defined(pic18f2321)
+#elif defined(__SDCC_PIC18F2321)
 #  include <pic18f2321.h>
 
-#elif defined(pic18f2331)
+#elif defined(__SDCC_PIC18F2331)
 #  include <pic18f2331.h>
 
-#elif defined(pic18f23k20)
+#elif defined(__SDCC_PIC18F23K20)
 #  include <pic18f23k20.h>
 
-#elif defined(pic18f23k22)
+#elif defined(__SDCC_PIC18F23K22)
 #  include <pic18f23k22.h>
 
-#elif defined(pic18f2410)
+#elif defined(__SDCC_PIC18F2410)
 #  include <pic18f2410.h>
 
-#elif defined(pic18f2420)
+#elif defined(__SDCC_PIC18F2420)
 #  include <pic18f2420.h>
 
-#elif defined(pic18f2423)
+#elif defined(__SDCC_PIC18F2423)
 #  include <pic18f2423.h>
 
-#elif defined(pic18f2431)
+#elif defined(__SDCC_PIC18F2431)
 #  include <pic18f2431.h>
 
-#elif defined(pic18f2450)
+#elif defined(__SDCC_PIC18F2450)
 #  include <pic18f2450.h>
 
-#elif defined(pic18f2455)
+#elif defined(__SDCC_PIC18F2455)
 #  include <pic18f2455.h>
 
-#elif defined(pic18f2480)
+#elif defined(__SDCC_PIC18F2480)
 #  include <pic18f2480.h>
 
-#elif defined(pic18f24j10)
+#elif defined(__SDCC_PIC18F24J10)
 #  include <pic18f24j10.h>
 
-#elif defined(pic18f24j50)
+#elif defined(__SDCC_PIC18F24J50)
 #  include <pic18f24j50.h>
 
-#elif defined(pic18f24k20)
+#elif defined(__SDCC_PIC18F24K20)
 #  include <pic18f24k20.h>
 
-#elif defined(pic18f24k22)
+#elif defined(__SDCC_PIC18F24K22)
 #  include <pic18f24k22.h>
 
-#elif defined(pic18f2510)
+#elif defined(__SDCC_PIC18F2510)
 #  include <pic18f2510.h>
 
-#elif defined(pic18f2515)
+#elif defined(__SDCC_PIC18F2515)
 #  include <pic18f2515.h>
 
-#elif defined(pic18f2520)
+#elif defined(__SDCC_PIC18F2520)
 #  include <pic18f2520.h>
 
-#elif defined(pic18f2523)
+#elif defined(__SDCC_PIC18F2523)
 #  include <pic18f2523.h>
 
-#elif defined(pic18f2525)
+#elif defined(__SDCC_PIC18F2525)
 #  include <pic18f2525.h>
 
-#elif defined(pic18f2550)
+#elif defined(__SDCC_PIC18F2550)
 #  include <pic18f2550.h>
 
-#elif defined(pic18f2580)
+#elif defined(__SDCC_PIC18F2580)
 #  include <pic18f2580.h>
 
-#elif defined(pic18f2585)
+#elif defined(__SDCC_PIC18F2585)
 #  include <pic18f2585.h>
 
-#elif defined(pic18f25j10)
+#elif defined(__SDCC_PIC18F25J10)
 #  include <pic18f25j10.h>
 
-#elif defined(pic18f25j50)
+#elif defined(__SDCC_PIC18F25J50)
 #  include <pic18f25j50.h>
 
-#elif defined(pic18f25k20)
+#elif defined(__SDCC_PIC18F25K20)
 #  include <pic18f25k20.h>
 
-#elif defined(pic18f25k22)
+#elif defined(__SDCC_PIC18F25K22)
 #  include <pic18f25k22.h>
 
-#elif defined(pic18f2610)
+#elif defined(__SDCC_PIC18F2610)
 #  include <pic18f2610.h>
 
-#elif defined(pic18f2620)
+#elif defined(__SDCC_PIC18F2620)
 #  include <pic18f2620.h>
 
-#elif defined(pic18f2680)
+#elif defined(__SDCC_PIC18F2680)
 #  include <pic18f2680.h>
 
-#elif defined(pic18f2682)
+#elif defined(__SDCC_PIC18F2682)
 #  include <pic18f2682.h>
 
-#elif defined(pic18f2685)
+#elif defined(__SDCC_PIC18F2685)
 #  include <pic18f2685.h>
 
-#elif defined(pic18f26j50)
+#elif defined(__SDCC_PIC18F26J50)
 #  include <pic18f26j50.h>
 
-#elif defined(pic18f26k20)
+#elif defined(__SDCC_PIC18F26K20)
 #  include <pic18f26k20.h>
 
-#elif defined(pic18f26k22)
+#elif defined(__SDCC_PIC18F26K22)
 #  include <pic18f26k22.h>
 
-#elif defined(pic18f4220)
+#elif defined(__SDCC_PIC18F4220)
 #  include <pic18f4220.h>
 
-#elif defined(pic18f4221)
+#elif defined(__SDCC_PIC18F4221)
 #  include <pic18f4221.h>
 
-#elif defined(pic18f4320)
+#elif defined(__SDCC_PIC18F4320)
 #  include <pic18f4320.h>
 
-#elif defined(pic18f4321)
+#elif defined(__SDCC_PIC18F4321)
 #  include <pic18f4321.h>
 
-#elif defined(pic18f4331)
+#elif defined(__SDCC_PIC18F4331)
 #  include <pic18f4331.h>
 
-#elif defined(pic18f43k20)
+#elif defined(__SDCC_PIC18F43K20)
 #  include <pic18f43k20.h>
 
-#elif defined(pic18f43k22)
+#elif defined(__SDCC_PIC18F43K22)
 #  include <pic18f43k22.h>
 
-#elif defined(pic18f4410)
+#elif defined(__SDCC_PIC18F4410)
 #  include <pic18f4410.h>
 
-#elif defined(pic18f4420)
+#elif defined(__SDCC_PIC18F4420)
 #  include <pic18f4420.h>
 
-#elif defined(pic18f4423)
+#elif defined(__SDCC_PIC18F4423)
 #  include <pic18f4423.h>
 
-#elif defined(pic18f4431)
+#elif defined(__SDCC_PIC18F4431)
 #  include <pic18f4431.h>
 
-#elif defined(pic18f4450)
+#elif defined(__SDCC_PIC18F4450)
 #  include <pic18f4450.h>
 
-#elif defined(pic18f4455)
+#elif defined(__SDCC_PIC18F4455)
 #  include <pic18f4455.h>
 
-#elif defined(pic18f4480)
+#elif defined(__SDCC_PIC18F4480)
 #  include <pic18f4480.h>
 
-#elif defined(pic18f44j10)
+#elif defined(__SDCC_PIC18F44J10)
 #  include <pic18f44j10.h>
 
-#elif defined(pic18f44j50)
+#elif defined(__SDCC_PIC18F44J50)
 #  include <pic18f44j50.h>
 
-#elif defined(pic18f44k20)
+#elif defined(__SDCC_PIC18F44K20)
 #  include <pic18f44k20.h>
 
-#elif defined(pic18f44k22)
+#elif defined(__SDCC_PIC18F44K22)
 #  include <pic18f44k22.h>
 
-#elif defined(pic18f4510)
+#elif defined(__SDCC_PIC18F4510)
 #  include <pic18f4510.h>
 
-#elif defined(pic18f4515)
+#elif defined(__SDCC_PIC18F4515)
 #  include <pic18f4515.h>
 
-#elif defined(pic18f4520)
+#elif defined(__SDCC_PIC18F4520)
 #  include <pic18f4520.h>
 
-#elif defined(pic18f4523)
+#elif defined(__SDCC_PIC18F4523)
 #  include <pic18f4523.h>
 
-#elif defined(pic18f4525)
+#elif defined(__SDCC_PIC18F4525)
 #  include <pic18f4525.h>
 
-#elif defined(pic18f4550)
+#elif defined(__SDCC_PIC18F4550)
 #  include <pic18f4550.h>
 
-#elif defined(pic18f4580)
+#elif defined(__SDCC_PIC18F4580)
 #  include <pic18f4580.h>
 
-#elif defined(pic18f4585)
+#elif defined(__SDCC_PIC18F4585)
 #  include <pic18f4585.h>
 
-#elif defined(pic18f45j10)
+#elif defined(__SDCC_PIC18F45J10)
 #  include <pic18f45j10.h>
 
-#elif defined(pic18f45j50)
+#elif defined(__SDCC_PIC18F45J50)
 #  include <pic18f45j50.h>
 
-#elif defined(pic18f45k20)
+#elif defined(__SDCC_PIC18F45K20)
 #  include <pic18f45k20.h>
 
-#elif defined(pic18f45k22)
+#elif defined(__SDCC_PIC18F45K22)
 #  include <pic18f45k22.h>
 
-#elif defined(pic18f4610)
+#elif defined(__SDCC_PIC18F4610)
 #  include <pic18f4610.h>
 
-#elif defined(pic18f4620)
+#elif defined(__SDCC_PIC18F4620)
 #  include <pic18f4620.h>
 
-#elif defined(pic18f4680)
+#elif defined(__SDCC_PIC18F4680)
 #  include <pic18f4680.h>
 
-#elif defined(pic18f4682)
+#elif defined(__SDCC_PIC18F4682)
 #  include <pic18f4682.h>
 
-#elif defined(pic18f4685)
+#elif defined(__SDCC_PIC18F4685)
 #  include <pic18f4685.h>
 
-#elif defined(pic18f46j50)
+#elif defined(__SDCC_PIC18F46J50)
 #  include <pic18f46j50.h>
 
-#elif defined(pic18f46k20)
+#elif defined(__SDCC_PIC18F46K20)
 #  include <pic18f46k20.h>
 
-#elif defined(pic18f46k22)
+#elif defined(__SDCC_PIC18F46K22)
 #  include <pic18f46k22.h>
 
-#elif defined(pic18f6520)
+#elif defined(__SDCC_PIC18F6520)
 #  include <pic18f6520.h>
 
-#elif defined(pic18f6527)
+#elif defined(__SDCC_PIC18F6527)
 #  include <pic18f6527.h>
 
-#elif defined(pic18f6585)
+#elif defined(__SDCC_PIC18F6585)
 #  include <pic18f6585.h>
 
-#elif defined(pic18f65j50)
+#elif defined(__SDCC_PIC18F65J50)
 #  include <pic18f65j50.h>
 
-#elif defined(pic18f6620)
+#elif defined(__SDCC_PIC18F6620)
 #  include <pic18f6620.h>
 
-#elif defined(pic18f6622)
+#elif defined(__SDCC_PIC18F6622)
 #  include <pic18f6622.h>
 
-#elif defined(pic18f6627)
+#elif defined(__SDCC_PIC18F6627)
 #  include <pic18f6627.h>
 
-#elif defined(pic18f6680)
+#elif defined(__SDCC_PIC18F6680)
 #  include <pic18f6680.h>
 
-#elif defined(pic18f66j50)
+#elif defined(__SDCC_PIC18F66J50)
 #  include <pic18f66j50.h>
 
-#elif defined(pic18f66j55)
+#elif defined(__SDCC_PIC18F66J55)
 #  include <pic18f66j55.h>
 
-#elif defined(pic18f66j60)
+#elif defined(__SDCC_PIC18F66J60)
 #  include <pic18f66j60.h>
 
-#elif defined(pic18f66j65)
+#elif defined(__SDCC_PIC18F66J65)
 #  include <pic18f66j65.h>
 
-#elif defined(pic18f6720)
+#elif defined(__SDCC_PIC18F6720)
 #  include <pic18f6720.h>
 
-#elif defined(pic18f6722)
+#elif defined(__SDCC_PIC18F6722)
 #  include <pic18f6722.h>
 
-#elif defined(pic18f67j50)
+#elif defined(__SDCC_PIC18F67J50)
 #  include <pic18f67j50.h>
 
-#elif defined(pic18f67j60)
+#elif defined(__SDCC_PIC18F67J60)
 #  include <pic18f67j60.h>
 
-#elif defined(pic18f8520)
+#elif defined(__SDCC_PIC18F8520)
 #  include <pic18f8520.h>
 
-#elif defined(pic18f8527)
+#elif defined(__SDCC_PIC18F8527)
 #  include <pic18f8527.h>
 
-#elif defined(pic18f8585)
+#elif defined(__SDCC_PIC18F8585)
 #  include <pic18f8585.h>
 
-#elif defined(pic18f85j50)
+#elif defined(__SDCC_PIC18F85J50)
 #  include <pic18f85j50.h>
 
-#elif defined(pic18f8620)
+#elif defined(__SDCC_PIC18F8620)
 #  include <pic18f8620.h>
 
-#elif defined(pic18f8622)
+#elif defined(__SDCC_PIC18F8622)
 #  include <pic18f8622.h>
 
-#elif defined(pic18f8627)
+#elif defined(__SDCC_PIC18F8627)
 #  include <pic18f8627.h>
 
-#elif defined(pic18f8680)
+#elif defined(__SDCC_PIC18F8680)
 #  include <pic18f8680.h>
 
-#elif defined(pic18f86j50)
+#elif defined(__SDCC_PIC18F86J50)
 #  include <pic18f86j50.h>
 
-#elif defined(pic18f86j55)
+#elif defined(__SDCC_PIC18F86J55)
 #  include <pic18f86j55.h>
 
-#elif defined(pic18f86j60)
+#elif defined(__SDCC_PIC18F86J60)
 #  include <pic18f86j60.h>
 
-#elif defined(pic18f86j65)
+#elif defined(__SDCC_PIC18F86J65)
 #  include <pic18f86j65.h>
 
-#elif defined(pic18f8720)
+#elif defined(__SDCC_PIC18F8720)
 #  include <pic18f8720.h>
 
-#elif defined(pic18f8722)
+#elif defined(__SDCC_PIC18F8722)
 #  include <pic18f8722.h>
 
-#elif defined(pic18f87j50)
+#elif defined(__SDCC_PIC18F87J50)
 #  include <pic18f87j50.h>
 
-#elif defined(pic18f87j60)
+#elif defined(__SDCC_PIC18F87J60)
 #  include <pic18f87j60.h>
 
-#elif defined(pic18f96j60)
+#elif defined(__SDCC_PIC18F96J60)
 #  include <pic18f96j60.h>
 
-#elif defined(pic18f96j65)
+#elif defined(__SDCC_PIC18F96J65)
 #  include <pic18f96j65.h>
 
-#elif defined(pic18f97j60)
+#elif defined(__SDCC_PIC18F97J60)
 #  include <pic18f97j60.h>
 
 
